test/expected/explain_fkrel_i.out
explain int f(x, ...)
                 ^
18: error: ellipsis is not supported until C89
